L-code のドキュメントへのリンクを追加
併せてサイト内リンクも整理した。

--- a/index.html
+++ b/index.html
@@ -256,10 +256,13 @@ alt="" title="漢直/JS" width="16" height="16"></a>
 
 <ul>
  <li> <a href="memo.html">おぼえがき</a>
+      <ul>
+       <li> <a href="memo.html#sec_code_help">文字ヘルプの見かた</a>
+       <li> <a href="memo.html#sec_LCS">eelll/JS の誤字判定</a>
+       <li> <a href="memo.html#sec_links">関連リンク集</a>
+      </ul>
  <li> <a href="eellltxtindex.html">EELLTXT のもくじ</a>
- <li> <a href="code_help.html">文字ヘルプの見かた</a>
- <li> <a href="lcs.html">eelll/JS の誤字判定</a>
- <li> <a href="links.html">関連リンク集</a>
+ <li> <a href="l.html">L-code</a>
 </ul>
 
 <!-- ============================================================= -->
@@ -271,7 +274,7 @@ alt="" title="漢直/JS" width="16" height="16"></a>
  <dt>2013-12-15</dt>
  <dd>
       [eelll/JS]
-      js/lt/llllltxtg6.js (and js/im/l.js): F131215
+      js/lt/llllltxtg6.js (and js/im/l.js): <a href="l.html">F131215</a>
       </dd>
 
  <dt>2013-12-05</dt>
@@ -326,7 +329,7 @@ alt="" title="漢直/JS" width="16" height="16"></a>
  <dt>2013-11-12 v.0.3</dt>
  <dd>
       [eelll/JS] [漢索/JS] [漢直/JS]
-      L-code (仮) に対応<br>
+      <a href="l.html">L-code</a> (仮) に対応<br>
       [eelll/JS]
       入力欄 <code>&lt;input type=&quot;text&quot;...&gt;</code> に
       <code>autocomplete=&quot;off&quot;</code> を追加。
