外部リンクが切れている箇所を web.archive.org を参照する形に変更
web.archive.org でアーカイブされていないページについても特に区別せず
同様の対応としている。

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 alt="" title="eelll/JS" width="16" height="16"></a>
 は、<a href="http://openlab.ring.gr.jp/tcode/intro.html">T-Code</a>
 や
-<a href="http://www.crew.sfc.keio.ac.jp/~chk/index-old.html">TUT-code</a>
+<a href="http://web.archive.org/web/*/http://www.crew.sfc.keio.ac.jp/~chk/index-old.html">TUT-code</a>
 などの
 <dfn>漢字直接入力</dfn>
 の練習プログラムです。T-Code の伝統的な練習プログラム
@@ -153,7 +153,7 @@ alt="" title="漢索/JS" width="16" height="16"></a>
 は、
 入力された文字の漢字直接入力のコードを検索するプログラムです。
 「<a href="http://web.archive.org/web/*/http://t.pos.to/tc/kansaku.html">漢索板</a>」
-や、「漢索窓」(<a href="http://www.sato.kuis.kyoto-u.ac.jp/~yuse/tcode/kw/"
+や、「漢索窓」(<a href="http://web.archive.org/web/*/http://www.sato.kuis.kyoto-u.ac.jp/~yuse/tcode/kw/"
 >漢直Win</a> に付属) の JavaScript 版です。</p>
 
 <h3><a name="subsec_kansakujs_usage" href="#subsec_kansakujs_usage">使い方</a></h3>
@@ -164,7 +164,7 @@ alt="" title="漢索/JS" width="16" height="16"></a>
 のページに進み、画面上部の [設定(C)] パネルで
 [入力方式(I)] と [スタイル(Y)] を選びます。
 [検索(J)] 欄に、コードを調べたい文字を
-(IME や <a href="http://www.sato.kuis.kyoto-u.ac.jp/~yuse/tcode/kw/"
+(IME や <a href="http://web.archive.org/web/*/http://www.sato.kuis.kyoto-u.ac.jp/~yuse/tcode/kw/"
 >漢直Win</a> などを用いて) 入力すると、
 選択した入力方式・スタイルでコードが表示されます。</p>
 
